+fixGap

--- a/css/styles.css
+++ b/css/styles.css
@@ -860,7 +860,8 @@ body {
     flex-direction: row; 
     flex-wrap: wrap;
     align-items: flex-start; 
-    gap: 32px;
+    gap: 24px;
+    row-gap: 64px;
 }
 /*****Costumers*****/
 .list2 {    
